# Elder-Berry

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .public-readiness-blocklist.example.txt  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Elder-Berry.code-workspace  LICENSE  NOTICE.md  README.md  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt  setup.ps1
.devcontainer/: devcontainer.json
.githooks/: README.md  commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: elder-berry-maintainer.agent.md
.github/codeql/: codeql-config.yml
.github/prompts/: start-phase.prompt.md
.github/rulesets/: README.md  main-protection-strict.json  main-protection.json
.github/workflows/: ci.yml  codeql.yml
docs/: ANALYSE_PHASE31.md  CHANGELOG.md  EINKAUFSLISTE.md  INSTALLATION.md  PROJECT_ROADMAP.md  USAGE.md  analyse.md  architecture.md  class-analysis.md  cowork-task-class-analysis.md  journal.txt  matrix_setup.md  rpi5_setup.md  ssh-tunnel.md
docs/assets/: README.md
docs/concepts/: dashboard-2.0.md  emotion-recognition-voice.md  filler-strip-in-execute.md  fix-tower-update-restart-flow.md  gehaeuse-baumstamm-spec.md  harmony-remote-erweitert.md  nextcloud-config.md  nextcloud-setup-command.md  note-nextcloud-replace.md  note-nextcloud-sync.md  phase-15-self-update.md  phase-16-notizen-wissensdatenbank.md  phase-17-kalender-watcher.md  phase-19-wiederkehrende-erinnerungen.md  phase-20-multi-step-task-chaining.md  phase-21-proaktive-kontext-verknuepfung.md  phase-22-intent-routing.md  phase-23-konversations-zusammenfassung.md  phase-24-avatar-asset-management.md  phase-25-zentrales-logging.md  phase-26-kamera-integration.md  phase-27-drehteller-steuerung.md  phase-28-email-reply.md  phase-29-kontaktbuch.md  phase-30-todo-liste.md  phase-36-dashboard-2.0.md  phase-36-nextcloud-integration.md  phase-36-smart-home-integration.md  phase-37-smart-home-integration.md  phase-38-sprachsteuerung.md  phase-39-kontakte-vollintegration.md  phase-39-sprachsteuerung.md  phase-40-sprachsteuerung.md  phase-42-dokument-ablage.md  phase-43-routenplanung.md  phase-44-server-migration.md  phase-45-settings-dashboard.md  phase-46-setup-wizard.md  phase-47-befehlsmuster-stabilisierung.md  phase-52-unified-settings.md  (+32 more)
docs/deploy/: nginx-fern.conf
docs/prompts/: phase-36-1-nextcloud-files.md  phase-36-2-caldav-calendar.md  phase-36-3-carddav-contacts.md  phase-42-dokument-ablage.md  setup-borgbackup-hetzner.md  stirling-pdf-integration.md
docs/templates/: plugin_template.py.template
hardware/electronics/: elder-berry.kicad_prl  elder-berry.kicad_pro  elder-berry.kicad_sch
hardware/enclosure/: APDS9960.ipt  Bauteil1.ipt  Camera Moudule 3 v8.ipt  Deckel.ipt  Displayhalter.ipt  Elder-Berry.iam  Flachband.ipt  GY-BME280.ipt  Hall Effect Sensor Sunkee A3144 v4.ipt  Raspberry Pi Touch Display 2.ipt  Schrittmotor aufnahme.ipt  Stamm.iam  acrylglas.ipt  drehkranz 2.ipt  drehkranz.ipt  drehteller.ipt  niederhalter.ipt  niederhalter_MIR.ipt
hardware/enclosure/iLogic/: BarkPaths.iLogicVb  RootFingers.iLogicVb  RootPaths.iLogicVb
scripts/: Install-AgentGuardrails.ps1  Install-SshTunnelTask.example.ps1  check_public_readiness.py  demo_avatar_tts.py  demo_integration.py  demo_matrix_bot.py  demo_tts_live.py  deploy_dashboard.sh  elder_berry_export.jsx  generate_placeholder_sprites.py  generate_plugin.py  install.ps1  install.sh  migrate_todos_to_nextcloud.py  set_dashboard_password.py  setup_email.py  setup_google_oauth.py  setup_wizard.py  ssh-tunnel.example.ps1  start_rpi5.py  start_saleria.py  test_hall.py  test_stepper.py  test_tts_stt_roundtrip.py  update-lockfiles.ps1  update-lockfiles.sh
server/: elder-berry-tower.service  elder-berry.service
src/elder_berry/: __init__.py
src/elder_berry/actions/: __init__.py  base.py  computer_use.py  db.py  windows_controller.py
src/elder_berry/agent/: __init__.py  client.py  protocol.py  server.py
src/elder_berry/avatar/: avatar_config_loader.py  base.py  layered_renderer.py  sprite_renderer.py
src/elder_berry/character/: base.py  emotion_tracker.py  saleria.py  saleria.yaml
src/elder_berry/comms/: __init__.py  action_sequence.py  alert_monitor.py  allowed_senders.py  audio_converter.py  audio_pipeline.py  bridge.py  briefing_scheduler.py  calendar_watcher.py  chat_history.py  claude_agent.py  confirmation_handlers.py  matrix_channel.py  message_channel.py  message_handlers.py  pending_confirmation.py  pending_initiative.py  proposal_notifier.py  reminder_scheduler.py  remote_commands.py  restart_manager.py  scheduler_manager.py
src/elder_berry/core/: __init__.py  assistant.py  audio_router.py  context_enricher.py  error_collector.py  log_sanitize.py  path_guard.py  prompts.py  secret_store.py  smart_context.py  startup_summary.py  stt_router.py  task_chain.py  tower_agent.py  tts_router.py  (+1 more)
tests/: conftest.py  test_action_controller.py  test_action_sequence.py  test_actions_db.py  test_advanced_commands.py  test_agent_protocol.py  test_alert_monitor.py  test_alexa_skill_handler.py  test_allowed_senders_fail_closed.py  test_anthropic_client.py  test_assistant.py  test_assistant_action_sequence_hint.py  test_assistant_agent.py  test_assistant_integration.py  test_assistant_matrix.py  test_assistant_plugin_extraction.py  test_assistant_plugin_inventory.py  test_assistant_robot.py  test_assistant_system.py  test_audio_converter.py  test_audio_dashboard.py  test_audio_pipeline.py  test_audio_router.py  test_avatar_config_loader.py  test_avatar_editor.py  test_avatar_editor_onboarding.py  test_avatar_renderer.py  test_brave_search.py  test_bridge.py  test_briefing_phase38.py  test_briefing_scheduler.py  test_caldav_calendar.py  test_caldav_tasks.py  test_calendar_commands.py  test_calendar_watcher.py  test_camera_commands.py  test_camera_controller.py  test_carddav_extended.py  test_carddav_sync.py  test_character_engine.py  (+151 more)
tower/: tower_server.py
(+153 files in other folders)
