[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "elder-berry"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "psutil>=5.9",
    "httpx>=0.28.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "cryptography>=47.0.0",
    "anthropic>=0.40",
    "tzdata>=2024.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "bcrypt>=5.0.0",    # Phase 58: Dashboard-Login (PW-Hash, Tower + CI)
    "keyring>=25.7.0",  # Phase 65 (M-1): Fernet-Masterkey im OS-Keyring
                      # (Windows DPAPI / macOS Keychain / Linux Secret Service).
                      # Fallback auf Plaintext-Datei wenn kein Backend da.
]

[project.optional-dependencies]
windows = [
    "pyautogui>=0.9",
    "PyGetWindow>=0.0.9",
    "pycaw>=20230407",
    "comtypes>=1.2",
    "pyttsx3>=2.99",
]
tts-neural = [
    "coqui-tts>=0.27",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
avatar = [
    "pygame>=2.6.1",
]
robot = []
agent = [
    "python-multipart>=0.0.18",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
matrix = [
    "matrix-nio>=0.24",
    "aiofiles>=23.0",
]
remote = [
    "mss>=10.2.0",
    "pyperclip>=1.9",
]
memory = [
    "chromadb>=0.5",
]
stt = [
    "faster-whisper>=1.2.1",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
tools = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.3.1",
]
documents = [
    "pymupdf>=1.23",
]
computer-use = [
    "Pillow>=10.0",
    "mss>=10.2.0",
]
web = [
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
]
nextcloud = [
    "caldav>=1.0",
    "vobject>=0.9",
]
harmony = [
    "aioharmony>=0.5.0",
]
tower = [
    "matrix-nio>=0.24",
    "aiofiles>=23.0",
    "python-multipart>=0.0.18",
    "coqui-tts>=0.27",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
    "faster-whisper>=1.2.1",
    "pyautogui>=0.9",
    "PyGetWindow>=0.0.9",
    "pycaw>=20230407",
    "comtypes>=1.2",
    "mss>=10.2.0",
]
server = [
    "matrix-nio>=0.24",
    "aiofiles>=23.0",
    "chromadb>=0.5",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.3.1",
    "pymupdf>=1.23",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
    "caldav>=1.0",
    "vobject>=0.9",
]
dev = [
    "pytest-timeout>=2.4.0",
    "pip-tools>=7.0",  # Phase 65 (M-3): Lockfile-Generierung via pip-compile
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# B008: FastAPI nutzt File(...)/Form(...)/Body(...) als Argument-Default –
# das ist das offizielle FastAPI-Pattern, kein echter Bug.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
# Phase 55.2 – jeder Test wird nach 60s zwangsweise abgebrochen. Fängt
# Hänger durch echte Syscalls (SendMessageTimeoutW, Netzwerk, Display)
# früh ab, statt den ganzen Run zu blockieren. Einzelne Tests dürfen
# mit @pytest.mark.timeout(n) einen höheren Wert setzen.
timeout = 60
timeout_method = "thread"
