[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "elder-berry"
version = "1.0.0-rc1"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "psutil>=5.9",
    "httpx>=0.28.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "cryptography>=47.0.0",
    "anthropic>=0.40",
    "tzdata>=2024.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "bcrypt>=5.0.0",    # Phase 58: Dashboard-Login (PW-Hash, Tower + CI)
    "keyring>=25.7.0",  # Phase 65 (M-1): Fernet-Masterkey im OS-Keyring
                      # (Windows DPAPI / macOS Keychain / Linux Secret Service).
                      # Fallback auf Plaintext-Datei wenn kein Backend da.
]

[project.optional-dependencies]
windows = [
    "pyautogui>=0.9",
    "PyGetWindow>=0.0.9",
    "pycaw>=20230407",
    "comtypes>=1.2",
    "pyttsx3>=2.99",
]
tts-neural = [
    "coqui-tts>=0.27",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
avatar = [
    "pygame>=2.6.1",
]
robot = []
agent = [
    "python-multipart>=0.0.18",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
matrix = [
    "matrix-nio>=0.24",
    "aiofiles>=23.0",
]
remote = [
    "mss>=10.2.0",
    "pyperclip>=1.9",
]
memory = [
    "chromadb>=0.5",
]
stt = [
    "faster-whisper>=1.2.1",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
tools = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.3.1",
]
documents = [
    "pymupdf>=1.23",
]
computer-use = [
    "Pillow>=10.0",
    "mss>=10.2.0",
]
web = [
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
]
nextcloud = [
    "caldav>=1.0",
    "vobject>=0.9",
]
harmony = [
    "aioharmony>=0.5.0",
]
tower = [
    "matrix-nio>=0.24",
    "aiofiles>=23.0",
    "python-multipart>=0.0.18",
    "coqui-tts>=0.27",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
    "faster-whisper>=1.2.1",
    "pyautogui>=0.9",
    "PyGetWindow>=0.0.9",
    "pycaw>=20230407",
    "comtypes>=1.2",
    "mss>=10.2.0",
]
server = [
    "matrix-nio>=0.24",
    "aiofiles>=23.0",
    "chromadb>=0.5",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.3.1",
    "pymupdf>=1.23",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
    "caldav>=1.0",
    "vobject>=0.9",
]
dev = [
    "pytest-timeout>=2.4.0",
    "pytest-cov>=5.0",  # Phase 74: Coverage-Messung fuer Codecov-Upload
    "pip-tools>=7.0",  # Phase 65 (M-3): Lockfile-Generierung via pip-compile
    "mypy>=1.13",      # Phase 76: Type-Checking core/
    "types-PyYAML",    # Stubs fuer YAML-Konfiguration
    "types-psutil",    # Stubs fuer system/info.py + startup_summary.py
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# B008: FastAPI nutzt File(...)/Form(...)/Body(...) als Argument-Default –
# das ist das offizielle FastAPI-Pattern, kein echter Bug.
ignore = ["B008"]

[tool.mypy]
# Phase 76: Type-Checking fuer core/. Globale Defaults sind locker -- Strict
# wird per-Modul ueber [[tool.mypy.overrides]] aktiviert (Tier-Rollout).
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
pretty = true

# --- Drittanbieter-Ignores (kein Stub-Paket verfuegbar oder unnoetig) ---
[[tool.mypy.overrides]]
module = [
    "pyautogui.*",
    "pygame.*",
    "coqui_tts.*",
    "faster_whisper.*",
    "mss.*",
    "pyperclip.*",
    "pycaw.*",
    "comtypes.*",
    "PyGetWindow.*",
    "pyttsx3.*",
    "aioharmony.*",
    "vobject.*",
    "caldav.*",
    "trafilatura.*",
    "chromadb.*",
    "matrix_nio.*",
    "nio.*",
    "keyring.*",            # types-keyring existiert nicht (Stand 2026-04, R5)
    "sounddevice.*",
    # Phase 76c: tools/-Clients ohne PEP-561-Stubs.
    "icalendar.*",          # caldav_calendar, caldav_tasks
    "google.auth.*",        # google_calendar (OAuth-Credentials)
    "google.oauth2.*",      # google_calendar (Credentials-Klassen)
    "google_auth_oauthlib.*",  # google_calendar (OAuth-Flow)
    "googleapiclient.*",    # google_calendar (build, errors)
    "fitz.*",               # pymupdf, document_reader
]
ignore_missing_imports = true

# --- Out-of-Scope-Pakete: Imports folgen, Funde unterdruecken ---
# core/-Module importieren Klassen aus tools/, comms/, web/ etc. Mypy
# folgt diesen Imports (richtig so, sonst waeren Aufrufer-Typen Any),
# produziert aber Funde in den nicht-strict Paketen.
#   - follow_imports = silent: greift, wenn die Module via Import gefolgt
#     werden (z.B. core/-Modul importiert tools/Foo).
#   - ignore_errors = true:    greift, wenn die Module direkt geprueft
#     werden (z.B. `mypy src/elder_berry` sieht alle Files direkt).
# Beide zusammen decken alle Aufrufmuster ab. Wird mit Phase 76b/c
# entfernt, sobald die Pakete selbst Tier-Sortierung bekommen.
[[tool.mypy.overrides]]
module = [
    "elder_berry.actions.*",
    "elder_berry.agent.*",
    "elder_berry.avatar.*",
    "elder_berry.character.*",
    "elder_berry.comms.*",
    "elder_berry.llm.*",
    "elder_berry.memory.*",
    "elder_berry.robot.*",
    "elder_berry.server.*",
    "elder_berry.stt.*",
    "elder_berry.system.*",
    "elder_berry.tts.*",
    "elder_berry.webapp.*",
    "scripts.*",
]
follow_imports = "silent"
ignore_errors = true

# --- Phase 76c WIP: noch nicht-strict tools/-Module ---
# Variante A (Konzept §4.1): enumerierte Liste statt Wildcard, schrumpft
# mit jedem Tier-Commit. Am Ende von 76c leer; dann wird der Block
# geloescht.
[[tool.mypy.overrides]]
module = [
    "elder_berry.tools",                    # __init__.py
    "elder_berry.tools.caldav_calendar",
    "elder_berry.tools.caldav_tasks",
    "elder_berry.tools.carddav_sync",
    "elder_berry.tools.contact_store",
    "elder_berry.tools.email_client",
    "elder_berry.tools.google_calendar",
    "elder_berry.tools.nextcloud_files",
    "elder_berry.tools.stirling_pdf",
]
follow_imports = "silent"
ignore_errors = true

# --- Phase 76c WIP: noch nicht-strict web/-Module ---
[[tool.mypy.overrides]]
module = [
    "elder_berry.web",                      # __init__.py
    "elder_berry.web.secrets_registry",
    "elder_berry.web.settings_dashboard",
    "elder_berry.web.setup_wizard",
]
follow_imports = "silent"
ignore_errors = true

# --- Phase 76 strict: alle core/-Module ---
[[tool.mypy.overrides]]
module = [
    "elder_berry.core.log_sanitize",
    "elder_berry.core.prompts",
    "elder_berry.core.path_guard",
    "elder_berry.core.error_collector",
    "elder_berry.core.audio_router",
    "elder_berry.core.url_validator",
    "elder_berry.core.startup_summary",
    "elder_berry.core.stt_router",
    "elder_berry.core.tts_router",
    "elder_berry.core.context_enricher",
    "elder_berry.core.task_chain",
    "elder_berry.core.smart_context",
    "elder_berry.core.secret_store",
    "elder_berry.core.tower_agent",
    "elder_berry.core.assistant",
]
strict = true

# --- Phase 76c strict: tools/ + web/ (waechst pro Tier-Commit) ---
[[tool.mypy.overrides]]
module = [
    "elder_berry.tools.brave_search_client",
    "elder_berry.tools.cloud_stt_client",
    "elder_berry.tools.document_classifier",
    "elder_berry.tools.document_reader",
    "elder_berry.tools.elevenlabs_client",
    "elder_berry.tools.email_sender",
    "elder_berry.tools.note_store",
    "elder_berry.tools.gym_data",
    "elder_berry.tools.recurrence",
    "elder_berry.tools.reminder_store",
    "elder_berry.tools.route_planner",
    "elder_berry.tools.todo_store",
    "elder_berry.tools.weather_client",
    "elder_berry.tools.web_fetcher",
    "elder_berry.web.avatar_editor",
    "elder_berry.web.dashboard_auth",
    "elder_berry.web.dashboard_auth_middleware",
    "elder_berry.web.dashboard_auth_routes",
    "elder_berry.web.llm_api",
    "elder_berry.web.origin_check_middleware",
    "elder_berry.web.rate_limiter",
    "elder_berry.web.robot_proxy",
    "elder_berry.web.secrets_api",
    "elder_berry.web.security_middleware",
    "elder_berry.web.session_revocation_list",
    "elder_berry.web.settings_token",
    "elder_berry.web.settings_token_middleware",
    "elder_berry.web.setup_tests",
]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
# Phase 55.2 – jeder Test wird nach 60s zwangsweise abgebrochen. Fängt
# Hänger durch echte Syscalls (SendMessageTimeoutW, Netzwerk, Display)
# früh ab, statt den ganzen Run zu blockieren. Einzelne Tests dürfen
# mit @pytest.mark.timeout(n) einen höheren Wert setzen.
timeout = 60
timeout_method = "thread"
