[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "elder-berry"
version = "1.0.0-rc1"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "psutil>=7.2.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.3",
    "cryptography>=48.0.0",
    "anthropic>=0.40",
    "tzdata>=2024.1",
    # 0.136.3 ausgeschlossen: MAL-2026-4750 -- diese Version fuegte den
    # undokumentierten Typosquat-Dep ``fastar>=0.9.0`` in die ``[standard]``-
    # Extras-Liste ein. Lockfile pinnt schon auf 0.136.1, der CI-Audit
    # (`pip install -e .` ohne Lock) wuerde sonst aber 0.136.3 ziehen.
    "fastapi>=0.136.1,!=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "bcrypt>=5.0.0",    # Phase 58: Dashboard-Login (PW-Hash, Tower + CI)
    "keyring>=25.7.0",  # Phase 65 (M-1): Fernet-Masterkey im OS-Keyring
                      # (Windows DPAPI / macOS Keychain / Linux Secret Service).
                      # Fallback auf Plaintext-Datei wenn kein Backend da.
]

[project.optional-dependencies]
windows = [
    "pyautogui>=0.9.54",
    "PyGetWindow>=0.0.9",
    "pycaw>=20251023",
    "comtypes>=1.2",
    "pyttsx3>=2.99",
]
tts-neural = [
    "coqui-tts>=0.27.5",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
avatar = [
    "pygame>=2.6.1",
]
robot = []
agent = [
    "python-multipart>=0.0.29",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
matrix = [
    "matrix-nio>=0.25.2",
    "aiofiles>=23.0",
    # Phase 85.4: HtmlEmailSanitizer wird ueber email_client transitiv
    # gezogen, sobald der Matrix-Bot remote_commands -> mail_commands
    # importiert. Ohne bs4 knallt der Import bei .[matrix]-Installs.
    "beautifulsoup4>=4.12",
    # Phase 86.1: css_decl_resolver (tinycss2) wird via
    # html_email_sanitizer (geplant 86.2) auf dem gleichen Import-
    # Pfad transitiv geladen wie bs4.
    "tinycss2>=1.5.1",
]
remote = [
    "mss>=10.2.0",
    "pyperclip>=1.9",
    # Phase 85.4: gleiche Begruendung wie matrix-Gruppe -- remote-
    # Client-Pfade laden email_client transitiv.
    "beautifulsoup4>=4.12",
    # Phase 86.1: siehe matrix-Gruppe.
    "tinycss2>=1.5.1",
]
memory = [
    "chromadb>=1.5.9",
]
stt = [
    "faster-whisper>=1.2.1",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
]
tools = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "google-auth-httplib2>=0.3.1",
]
documents = [
    "pymupdf>=1.27.2.3",
]
computer-use = [
    "Pillow>=12.2.0",
    "mss>=10.2.0",
]
web = [
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
    # Phase 78 Etappe 3: Plugin-Vorschlaege im Dashboard. Saleria-
    # generierte Markdown-Specs werden server-side gerendert + ueber
    # bleach.clean() gegen eine enge Allowlist gesaeubert (Konzept R3).
    "markdown-it-py>=3.0",
    "bleach>=6.1",
    # Phase 86.1: css_decl_resolver fuer html_email_sanitizer
    # (geplant 86.2). Web-Gruppe zieht trafilatura/bs4 fuer
    # Article-Extraktion -- gleicher Pipeline-Pfad wie der spaetere
    # Mail-Sanitizer.
    "tinycss2>=1.5.1",
]
nextcloud = [
    "caldav>=3.2.0",
    "vobject>=0.9",
]
harmony = [
    "aioharmony>=0.5.0",
]
tower = [
    "matrix-nio>=0.25.2",
    "aiofiles>=23.0",
    "python-multipart>=0.0.29",
    "coqui-tts>=0.27.5",
    "sounddevice>=0.5.5",
    "numpy>=1.26",
    "faster-whisper>=1.2.1",
    "pyautogui>=0.9.54",
    "PyGetWindow>=0.0.9",
    "pycaw>=20251023",
    "comtypes>=1.2",
    "mss>=10.2.0",
    # Phase 85: HtmlEmailSanitizer fuer IMAPEmailClient -- robustes
    # HTML-Stripping mit Hidden-Text-Filter statt naiver Regex.
    "beautifulsoup4>=4.12",
    # Phase 86.1: css_decl_resolver fuer den Sanitizer (geplant 86.2),
    # gleicher Import-Pfad wie bs4.
    "tinycss2>=1.5.1",
]
server = [
    "matrix-nio>=0.25.2",
    "aiofiles>=23.0",
    "chromadb>=1.5.9",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "google-auth-httplib2>=0.3.1",
    "pymupdf>=1.27.2.3",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12",
    "caldav>=3.2.0",
    "vobject>=0.9",
    # Phase 86.1: server-Tower-Pipeline pullt html_email_sanitizer
    # (geplant 86.2) transitiv ueber email_client/IMAP. tinycss2
    # ist die CSS-Tokenisierungs-Dep dafuer.
    "tinycss2>=1.5.1",
]
dev = [
    "pytest-timeout>=2.4.0",
    "pytest-cov>=5.0",  # Phase 74: Coverage-Messung fuer Codecov-Upload
    "pip-tools>=7.5.3",  # Phase 65 (M-3): Lockfile-Generierung via pip-compile
    "mypy>=1.13",      # Phase 76: Type-Checking core/
    "types-PyYAML",    # Stubs fuer YAML-Konfiguration
    "types-psutil",    # Stubs fuer system/info.py + startup_summary.py
    # Phase 86.2.1 (Codex-Folgefix): IMAPEmailClient importiert top-level
    # HtmlEmailSanitizer, der bs4 + tinycss2 braucht. Ohne diese Deps in
    # der dev-Gruppe scheitert `pip install -e .[dev]` und CI an dem
    # transitiven Import. Beide Pakete sind Pure-Python und klein, der
    # Aufwand fuer dev-Setup ist gegen die Test-Coverage vernachlaessigbar.
    "beautifulsoup4>=4.12",
    "tinycss2>=1.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# B008: FastAPI nutzt File(...)/Form(...)/Body(...) als Argument-Default –
# das ist das offizielle FastAPI-Pattern, kein echter Bug.
ignore = ["B008"]

[tool.mypy]
# Phase 76: Type-Checking fuer core/. Globale Defaults sind locker -- Strict
# wird per-Modul ueber [[tool.mypy.overrides]] aktiviert (Tier-Rollout).
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
pretty = true

# --- Drittanbieter-Ignores (kein Stub-Paket verfuegbar oder unnoetig) ---
[[tool.mypy.overrides]]
module = [
    "pyautogui.*",
    "pygame.*",
    "coqui_tts.*",
    "faster_whisper.*",
    "mss.*",
    "pyperclip.*",
    "pycaw.*",
    "comtypes.*",
    "PyGetWindow.*",
    "pyttsx3.*",
    "aioharmony.*",
    "vobject.*",
    "caldav.*",
    "trafilatura.*",
    "chromadb.*",
    "matrix_nio.*",
    "nio.*",
    "aiofiles.*",           # types-aiofiles existiert, aber wir konsumieren
                            # aiofiles ueber nio-aehnliche async-Generatoren
                            # -- Stub-Wert gering, Stub-Pflege hoch.
    "aiohttp.*",            # transitive ueber matrix-nio; auf CI nicht
                            # installiert (kein matrix-Gruppen-Install im
                            # typecheck-Job). Stubs uebersteuert per cast.
    "keyring.*",            # types-keyring existiert nicht (Stand 2026-04, R5)
    "sounddevice.*",
    # Phase 76c: tools/-Clients ohne PEP-561-Stubs.
    "icalendar.*",          # caldav_calendar, caldav_tasks
    "google.auth.*",        # google_calendar (OAuth-Credentials)
    "google.oauth2.*",      # google_calendar (Credentials-Klassen)
    "google_auth_oauthlib.*",  # google_calendar (OAuth-Flow)
    "googleapiclient.*",    # google_calendar (build, errors)
    "fitz.*",               # pymupdf, document_reader
    "bs4.*",                # Phase 85: html_email_sanitizer. Keine Stubs,
                            # oeffentliche Sanitizer-API ist str -> str.
    "tinycss2.*",           # Phase 86.1: css_decl_resolver. Keine Stubs,
                            # oeffentliche Resolver-API arbeitet ueber
                            # tinycss2.ast.Node-Listen, intern getypt.
]
ignore_missing_imports = true

# --- Out-of-Scope-Pakete: Imports folgen, Funde unterdruecken ---
# core/-Module importieren Klassen aus tools/, comms/, web/ etc. Mypy
# folgt diesen Imports (richtig so, sonst waeren Aufrufer-Typen Any),
# produziert aber Funde in den nicht-strict Paketen.
#   - follow_imports = silent: greift, wenn die Module via Import gefolgt
#     werden (z.B. core/-Modul importiert tools/Foo).
#   - ignore_errors = true:    greift, wenn die Module direkt geprueft
#     werden (z.B. `mypy src/elder_berry` sieht alle Files direkt).
# Beide zusammen decken alle Aufrufmuster ab. Wird mit Phase 76b/c
# entfernt, sobald die Pakete selbst Tier-Sortierung bekommen.
[[tool.mypy.overrides]]
module = [
    "elder_berry.actions.*",
    "elder_berry.agent.*",
    "elder_berry.avatar.*",
    "elder_berry.character.*",
    "elder_berry.llm.*",
    "elder_berry.memory.*",
    "elder_berry.robot.*",
    "elder_berry.server.*",
    "elder_berry.stt.*",
    "elder_berry.system.*",
    "elder_berry.tts.*",
    "elder_berry.webapp.*",
    "scripts.*",
]
follow_imports = "silent"
ignore_errors = true

# --- Phase 76 strict: alle core/-Module ---
[[tool.mypy.overrides]]
module = [
    "elder_berry.core.log_sanitize",
    "elder_berry.core.prompts",
    "elder_berry.core.path_guard",
    "elder_berry.core.error_collector",
    "elder_berry.core.audio_router",
    "elder_berry.core.url_validator",
    "elder_berry.core.startup_summary",
    "elder_berry.core.stt_router",
    "elder_berry.core.tts_router",
    "elder_berry.core.context_enricher",
    "elder_berry.core.task_chain",
    "elder_berry.core.smart_context",
    "elder_berry.core.secret_store",
    "elder_berry.core.tower_agent",
    "elder_berry.core.assistant",
]
strict = true

# --- Phase 76b strict: alle comms/-Module ---
# base.py + registry.py wurden bereits in Phase 77 (Plugin-Registry)
# strict gestellt; in 76b folgten die uebrigen 47 Module.
[[tool.mypy.overrides]]
module = [
    "elder_berry.comms",                                  # __init__.py
    "elder_berry.comms.commands",                         # __init__.py
    "elder_berry.comms.commands.base",
    "elder_berry.comms.commands.registry",
    "elder_berry.comms.alert_monitor",
    "elder_berry.comms.allowed_senders",
    "elder_berry.comms.audio_converter",
    "elder_berry.comms.audio_pipeline",
    "elder_berry.comms.bridge",
    "elder_berry.comms.briefing_scheduler",
    "elder_berry.comms.calendar_watcher",
    "elder_berry.comms.chat_history",
    "elder_berry.comms.claude_agent",
    "elder_berry.comms.confirmation_handlers",
    "elder_berry.comms.matrix_channel",
    "elder_berry.comms.message_channel",
    "elder_berry.comms.message_handlers",
    "elder_berry.comms.pending_confirmation",
    "elder_berry.comms.reminder_scheduler",
    "elder_berry.comms.remote_commands",
    "elder_berry.comms.restart_manager",
    "elder_berry.comms.scheduler_manager",
    "elder_berry.comms.commands.advanced_commands",
    "elder_berry.comms.commands.calendar_commands",
    "elder_berry.comms.commands.camera_commands",
    "elder_berry.comms.commands.cloud_commands",
    "elder_berry.comms.commands.cmd_utils",
    "elder_berry.comms.commands.contact_commands",
    "elder_berry.comms.commands.docker_commands",
    "elder_berry.comms.commands.file_commands",
    "elder_berry.comms.commands.filing_commands",
    "elder_berry.comms.commands.git_commands",
    "elder_berry.comms.commands.harmony_commands",
    "elder_berry.comms.commands.help_sections",
    "elder_berry.comms.commands.log_commands",
    "elder_berry.comms.commands.mail_commands",
    "elder_berry.comms.commands.note_commands",
    "elder_berry.comms.commands.pdf_commands",
    "elder_berry.comms.commands.process_commands",
    "elder_berry.comms.commands.route_commands",
    "elder_berry.comms.commands.selfcheck_commands",
    "elder_berry.comms.commands.system_commands",
    "elder_berry.comms.commands.todo_commands",
    "elder_berry.comms.commands.turntable_commands",
    "elder_berry.comms.commands.update_commands",
    "elder_berry.comms.commands.weather_commands",
    "elder_berry.comms.commands.wol_commands",
]
strict = true

# --- Phase 76c strict: alle tools/- und web/-Module ---
[[tool.mypy.overrides]]
module = [
    "elder_berry.tools",                    # __init__.py
    "elder_berry.web",                      # __init__.py
    "elder_berry.tools.brave_search_client",
    "elder_berry.tools.caldav_calendar",
    "elder_berry.tools.carddav_sync",
    "elder_berry.tools.caldav_tasks",
    "elder_berry.tools.cloud_stt_client",
    "elder_berry.tools.contact_store",
    "elder_berry.tools.document_classifier",
    "elder_berry.tools.document_reader",
    "elder_berry.tools.elevenlabs_client",
    "elder_berry.tools.email_client",
    "elder_berry.tools.email_sender",
    "elder_berry.tools.google_calendar",
    "elder_berry.tools.gym_data",
    "elder_berry.tools.html_email_sanitizer",
    "elder_berry.tools.css_decl_resolver",
    "elder_berry.tools.nextcloud_files",
    "elder_berry.tools.note_store",
    "elder_berry.tools.recurrence",
    "elder_berry.tools.reminder_store",
    "elder_berry.tools.stirling_pdf",
    "elder_berry.tools.route_planner",
    "elder_berry.tools.todo_store",
    "elder_berry.tools.weather_client",
    "elder_berry.tools.web_fetcher",
    "elder_berry.web.avatar_editor",
    "elder_berry.web.dashboard_auth",
    "elder_berry.web.dashboard_auth_middleware",
    "elder_berry.web.dashboard_auth_routes",
    "elder_berry.web.llm_api",
    "elder_berry.web.origin_check_middleware",
    "elder_berry.web.plugins_api",
    "elder_berry.web.rate_limiter",
    "elder_berry.web.robot_proxy",
    "elder_berry.web.secrets_api",
    "elder_berry.web.secrets_registry",
    "elder_berry.web.security_middleware",
    "elder_berry.web.session_revocation_list",
    "elder_berry.web.settings_token",
    "elder_berry.web.settings_dashboard",
    "elder_berry.web.settings_token_middleware",
    "elder_berry.web.setup_tests",
    "elder_berry.web.setup_wizard",
]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
# Phase 55.2 – jeder Test wird nach 60s zwangsweise abgebrochen. Fängt
# Hänger durch echte Syscalls (SendMessageTimeoutW, Netzwerk, Display)
# früh ab, statt den ganzen Run zu blockieren. Einzelne Tests dürfen
# mit @pytest.mark.timeout(n) einen höheren Wert setzen.
timeout = 60
timeout_method = "thread"
